--- a/tss_12.html
+++ b/tss_12.html
@@ -50,18 +50,18 @@
                     <div id="image_list" class=" bodypart">
                         <div class="grid" style="display:none; height:100%;">
                             <div class="col-3max-left" style="">
-                                <a href="images/tss12/img12_03.png" data-lightbox="lightbox"><img
+                                <a href="images/tss12/i3.jpg" data-lightbox="lightbox"><img
                                         src="./images/tss12/img12_03.png" class=""
                                         style="width:100%; height: 100%;"></a>
                             </div>
                             <div class="col-3max-right" style="">
                                 <div class="col-2n-3max-right">
-                                    <a href="images/tss12/img12_08.png" data-lightbox="lightbox"><img
+                                    <a href="images/tss12/i6.jpg" data-lightbox="lightbox"><img
                                             src="./images/tss12/img12_08.png" class=""
                                             style="width:100%; height: 100%;"></a>
                                 </div>
                                 <div class="col-3n-3max-right">
-                                    <a href="images/tss12/img12_05.png" data-lightbox="lightbox"><img
+                                    <a href="images/tss12/i5.jpg" data-lightbox="lightbox"><img
                                             src="./images/tss12/img12_05.png" class=""
                                             style="width:100%; height: 100%;"></a>
                                 </div>
@@ -70,9 +70,9 @@
 
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
-                                <div class="swiper-slide"><img src="images/tss12/img12_03.png"></div>
-                                <div class="swiper-slide"><img src="images/tss12/img12_05.png"></div>
-                                <div class="swiper-slide"><img src="images/tss12/img12_08.png"></div>
+                                <div class="swiper-slide"><img src="images/tss12/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss12/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tss12/i8.jpg"></div>
                             </div>
                         </div>
                     </div>
