--- a/tss_8.html
+++ b/tss_8.html
@@ -49,18 +49,18 @@
                             <div class="col2-60b-left" style=""> <!--左边60%-->
                                 <div class="lin2-25b-top"> <!--左边上25%-->
                                     <div class="lin2-25b-top-3col"> <!--左上3列-->
-                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
-                                                src="./images/tss8/img7_10.png" class=""
+                                        <a href="images/tss8/i10.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss8/i10.jpg" class=""
                                                 style="width:100%; height:117px;"></a>
                                     </div>
                                     <div class="lin2-25b-top-3col"> <!--左上3列-->
-                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
-                                                src="./images/tss8/img7_10.png" class=""
+                                        <a href="images/tss8/i7.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss8/i7.jpg" class=""
                                                 style="width:100%; height: 117px;"></a>
                                     </div>
                                     <div class="" style=" width: 33.33%; height: 100%; float: left; overflow: hidden;">
-                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
-                                                src="./images/tss8/img7_10.png" class=""
+                                        <a href="images/tss8/i6.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss8/i6.jpg" class=""
                                                 style="width:100%; height: 117px; float: right;"></a>
                                     </div>
                                 </div>
@@ -74,43 +74,43 @@
                             <div class="col2-40b-right" style=""> <!--右边40%-->
                                 <div class="col2-40b-right-1lin">  <!--右第一行-->
                                     <div style="float: left;width: 50%;">
-                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
-                                                src="./images/tss8/img7_10.png" class=""
+                                        <a href="images/tss8/i9.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss8/i9.jpg" class=""
                                                 style=" height: 117px;padding: 0 5px 0 0; "></a>
                                     </div>
                                     <div style="float: left;width: 50%;">
-                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
-                                                src="./images/tss8/img7_10.png" class=""
+                                        <a href="images/tss8/i4.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss8/i4.jpg" class=""
                                                 style=" height: 117px;padding: 0 0 0 5px;"></a>
                                     </div>
                                 </div>
                                 <div class="col2-40b-right-1lin">  <!--右第一行-->
                                     <div style="float: left;width: 50%;">
-                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
-                                                src="./images/tss8/img7_10.png" class=""
+                                        <a href="images/tss8/i5.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss8/i5.jpg" class=""
                                                 style=" height: 117px;padding: 0 5px 0 0;"></a>
                                     </div>
                                     <div style="float: left;width: 50%;">
-                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
-                                                src="./images/tss8/img7_10.png" class=""
+                                        <a href="images/tss8/i8.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss8/i8.jpg" class=""
                                                 style=" height: 117px;padding: 0 0 0 5px;"></a>
                                     </div>
                                 </div>
                                 <div class="col2-40b-right-1lin">  <!--右第一行-->
                                     <div style="float: left;width: 50%;">
-                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
-                                                src="./images/tss8/img7_10.png" class=""
+                                        <a href="images/tss8/i3.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss8/i3.jpg" class=""
                                                 style="height: 117px;padding: 0 5px 0 0;"></a>
                                     </div>
                                     <div style="float: left;width: 50%;">
-                                        <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
-                                                src="./images/tss8/img7_10.png" class=""
+                                        <a href="images/tss8/i2.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tss8/i2.jpg" class=""
                                                 style=" height: 117px;padding: 0 0 0 5px;"></a>
                                     </div>
                                 </div>
                                 <div style="width: 100%">  <!--右第一行-->
-                                    <a href="images/tss8/img7_10.png" data-lightbox="lightbox"><img
-                                            src="./images/tss8/img7_10.png" class=""
+                                    <a href="images/tss8/i1.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tss8/i1.jpg" class=""
                                             style=" height: 96px;"></a>
                                 </div>
 
