--- a/tdc_3.html
+++ b/tdc_3.html
@@ -49,21 +49,21 @@
                             <!--<a href="images/tdc3/i3_s.png" data-lightbox="lightbox"> <img src="./images/tdc3/i3_s.png"-->
                                                                                           <!--class=" width-1-2"> </a>-->
                             <div class=" width-2-2">
-                                <a href="images/tdc3/i4_s.png" data-lightbox="lightbox"><img
-                                        src="./images/tdc3/i4_s.png"> </a>
+                                <a href="images/tdc3/i3.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tdc3/i3.jpg"> </a>
                                 <div style="margin-top: 16px">
-                                    <a href="images/tdc3/i1_s.png" data-lightbox="lightbox"><img
-                                            src="./images/tdc3/i1_s.png"> </a>
+                                    <a href="images/tdc3/i4.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc3/i4.jpg"> </a>
                                 </div>
                             </div>
                             <div class=" width-2-2">
-                                <a href="images/tdc3/i4_s.png" data-lightbox="lightbox"><img
-                                        src="./images/tdc3/i4_s.png"> </a>
+                                <a href="images/tdc3/i5.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tdc3/i5.jpg"> </a>
                                 <div style="margin-top: 16px">
                                     <a href="images/tdc3/i1_s.png" data-lightbox="lightbox"><img
-                                            src="./images/tdc3/i1_s.png" class="width-1-2"> </a>
+                                            src="./images/tdc3/i1_s.png" class="width-1-2" style="height: 223px"> </a>
                                     <a href="images/tdc3/i2_s.png" data-lightbox="lightbox"><img
-                                            src="./images/tdc3/i2_s.png" class="width-2-2"> </a>
+                                            src="./images/tdc3/i2_s.png" class="width-2-2" style="height: 223px"> </a>
                                 </div>
 
                             </div>
