--- a/tdc_4.html
+++ b/tdc_4.html
@@ -49,13 +49,60 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none;">
-                <a href="images/tdc4/aimg_03.png" data-lightbox="lightbox" ><img src="./images/tdc4/aimg_03.png" class="zimg1" style="height: 80%;"></a>
-                <div class="zimg2" style="height:80%">
-                  <a href="images/tdc4/aimg_05.png" data-lightbox="lightbox" ><img src="./images/tdc4/aimg_05.png" class="amg1"></a>
-                  <a href="images/tdc4/aimg_08.png" data-lightbox="lightbox" ><img src="./images/tdc4/aimg_08.png" class="amg2"></a>
-                </div>
-              </div>
+                            <div class="col2-60b-left" style=""> <!--左边60%-->
+                                <div class="lin2-25b-top"> <!--左边上25%-->
+                                    <div class="lin2-25b-top-3col"> <!--左上3列-->
+                                        <a href="images/tdc4/i4.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc4/i4.jpg" class=""
+                                                style="width:100%; height:117px;"></a>
+                                    </div>
+                                    <div class="lin2-25b-top-3col"> <!--左上3列-->
+                                        <a href="images/tdc4/i2.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc4/i2.jpg" class=""
+                                                style="width:100%; height: 117px;"></a>
+                                    </div>
+                                    <div class="" style=" width: 33.33%; height: 100%; float: left; overflow: hidden;">
+                                        <a href="images/tdc4/i3.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc4/i3.jpg" class=""
+                                                style="width:100%; height: 117px; float: right;"></a>
+                                    </div>
+                                </div>
+                                <div class="lin2-75b-foot"> <!--左边下75%-->
+                                    <a href="images/tdc4/i1.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc4/i1.jpg" class=""
+                                            style="width:100%; height: 350px; "></a>
+                                </div>
+                            </div>
 
+                            <div class="col2-40b-right" style=""> <!--右边40%-->
+                                <div class="col2-40b-right-1lin">  <!--右第一行-->
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tdc4/i5.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc4/i5.jpg" class=""
+                                                style=" height: 117px;padding: 0 5px 0 0; "></a>
+                                    </div>
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tdc4/i6.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc4/i6.jpg" class=""
+                                                style=" height: 117px;padding: 0 0 0 5px;"></a>
+                                    </div>
+                                </div>
+                                <div class="col2-40b-right-1lin">  <!--右第一行-->
+                                    <div style="float: left;">
+                                        <a href="images/tdc4/i8.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc4/i8.jpg" class=""
+                                                style="width: 379px; height: 171px;padding: 0 5px 0 0;"></a>
+                                    </div>
+                                </div>
+
+                                <div style="width: 100%">  <!--右第一行-->
+                                    <a href="images/tdc4/i7.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc4/i7.jpg" class=""
+                                            style=" height: 161px;"></a>
+                                </div>
+
+                            </div>
+                        </div>
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">	<img src="images/tdc4/i7.jpg">	</div>
