--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a href="1_culture.html" class="sb culture_btn">  </a>
             </div>
             <div class="col-md-3">
-              <a href="1_party.html" class="sb party_btn"> </a>
+              <a href="1_jiandang.html" class="sb party_btn"> </a>
             </div>
         </div>
 
@@ -48,7 +48,7 @@
   </div>
   <script src="scripts/jquery-1.9.1.min.js"></script>
   <script src="scripts/bootstrap.min.js"></script>
-  
+
   <script src="scripts/swiper.jquery.min.js"></script>
   <script src="scripts/swiper.animate.min.js"></script>
   <script src="scripts/video.js"></script>
