--- a/try_2.html
+++ b/try_2.html
@@ -59,6 +59,7 @@
                   <div class="swiper-slide">	<img src="images/try2/i2.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/try2/i3.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/try2/i4.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/try2/i1.jpg">	</div>
                 </div>
               </div>
 
