--- a/tdc_5.html
+++ b/tdc_5.html
@@ -2,113 +2,152 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>金桥北汽配园区</title>
-  <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css" />
-  <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>金桥北汽配园区</title>
+    <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
+    <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
 
-  <link href="Styles/app.css" rel="stylesheet" type="text/css" />
+    <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <div class="page  tdc-detail">
+<div class="page  tdc-detail">
     <div class="container">
-      <div class="logo"> <img src="./images/tdc_logo.png"> </div>
-      <div class="row" id="zlogo">
-        <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/tdc_head.png"></div>
-        <div class="col-md-4"></div>
-      </div>
+        <div class="logo"><img src="./images/tdc_logo.png"></div>
+        <div class="row" id="zlogo">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"><img src="./images/tdc_head.png"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
     <div class="main">
-      <div class="main-content">
+        <div class="main-content">
 
-        <div class="row" id="wlsp">
-          <div class="col-md-3 leftpart">
-            <div class="titlepart">
-              <h3>金桥北<br/>汽配园区</h3>
-              <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
-            </div>
-            <div class=" bodypart">
-              <p class="desc typing-ani">
+            <div class="row" id="wlsp">
+                <div class="col-md-3 leftpart">
+                    <div class="titlepart">
+                        <h3>金桥北<br/>汽配园区</h3>
+                        <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
+                    </div>
+                    <div class=" bodypart">
+                        <p class="desc typing-ani">
                 <span class="text">位于大连市松江路55号的周水子钢材市场，是大连市最大、面积达17万平方米的钢材交易市场，市场内有专用线4条，龙门吊、汽车吊等装卸机具俱全，年货物周转量50万吨。周水子钢材市场凭借优质信誉及规范管理，一直保持大连钢材市场的领先地位。
                 </span>
-              </p>
-            </div>
+                        </p>
+                    </div>
 
-          </div>
-          <div class="col-md-9 rightpart" >
-            <div class="titlepart">
-
-
-            </div>
-            <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <a href="images/tdc5/simg_06.png" data-lightbox="lightbox" ><img src="./images/tdc5/simg_06.png" class="simg3" style="height: 80%;"></a>
-                <div class="simg4" style="height:80%">
-                  <a href="images/tdc5/simg_03.png" data-lightbox="lightbox" ><img src="./images/tdc5/simg_03.png" class="smg1"></a>
-                  <a href="images/tdc5/simg_09.png" data-lightbox="lightbox" ><img src="./images/tdc5/simg_09.png" class="smg2"></a>
                 </div>
-              </div>
+                <div class="col-md-9 rightpart">
+                    <div class="titlepart">
+                    </div>
+                    <div id="image_list" class=" bodypart">
+                        <div class="grid" style="display:none;">
 
-              <div class="swiper swiper-container">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">	<img src="images/tdc4/i7.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i1.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i2.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i3.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i4.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i5.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i6.jpg">	</div>
-                  <div class="swiper-slide">	<img src="images/tdc4/i1.jpg">	</div>
+                            <div class="col2-60b-left">
+                                <a href="images/tdc5/i5.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tdc5/i5.jpg" class=""
+                                        style="height: 468px"></a>
+                            </div>
+
+                            <div class="col2-40b-right" style=""> <!--右边40%-->
+                                <div class="col2-40b-right-1lin">  <!--右第一行-->
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tdc5/i4.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc5/i4.jpg" class=""
+                                                style="height: 156px; padding: 0 5px 0 0; "></a>
+                                    </div>
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tdc5/i3.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc5/i3.jpg" class=""
+                                                style="height: 156px;  padding: 0 0 0 5px;"></a>
+                                    </div>
+                                </div>
+                                <div class="col2-40b-right-2lin">  <!--右第二行-->
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tdc5/i6.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc5/i6.jpg" class=""
+                                                style=" height: 156px;padding: 0 5px 0 0; "></a>
+                                    </div>
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tdc5/i2.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc5/i2.jpg" class=""
+                                                style=" height: 156px;padding: 0 0 0 5px;"></a>
+                                    </div>
+                                </div>
+                                <div class="col2-40b-right-1lin">  <!--右第3行-->
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tdc5/i7.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc5/i7.jpg" class=""
+                                                style=" height: 156px;padding: 0 5px 0 0; "></a>
+                                    </div>
+                                    <div style="float: left;width: 50%;">
+                                        <a href="images/tdc5/i1.jpg" data-lightbox="lightbox"><img
+                                                src="./images/tdc5/i1.jpg" class=""
+                                                style=" height: 156px;padding: 0 0 0 5px;"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper swiper-container">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide"><img src="images/tdc4/i7.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i1.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i2.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i3.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i4.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i5.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i6.jpg"></div>
+                                <div class="swiper-slide"><img src="images/tdc4/i1.jpg"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
+
+
             </div>
-          </div>
-
-
         </div>
-      </div>
     </div>
     <nav id="footer" class="  navbar navbar-default navbar-fixed-bottom">
-      <div class="content">
-        <div class="col-md-3 leftpart">
-          <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal" >
-            <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
-            <span>		视频 </span>
-          </a>
-        </div>
+        <div class="content">
+            <div class="col-md-3 leftpart">
+                <a class="play-video-btn ctl_btn" href="javascript:void(0)" data-toggle="modal" data-target="#myModal">
+                    <span class="glyphicon glyphicon-film" aria-hidden="true"></span>
+                    <span>		视频 </span>
+                </a>
+            </div>
 
-        <div class="col-md-9 rightpart" >
-          <div class="pull-right">
-            <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();"> 返回 </a>
-            <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
-            <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
-            <audio id="audio-js"  class="audio-js">
-              <source src="audios/tdc5.ogg" type="audio/ogg" />
-            </audio>
-          </div>
+            <div class="col-md-9 rightpart">
+                <div class="pull-right">
+                    <a class="back-btn ctl_btn" href="javascript:void(0)" onclick="javascript:window.history.back();">
+                        返回 </a>
+                    <a class="back-home-btn ctl_btn" href="index.html"> 主页 </a>
+                    <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span
+                            class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
+                    <audio id="audio-js" class="audio-js">
+                        <source src="audios/tdc5.ogg" type="audio/ogg"/>
+                    </audio>
+                </div>
+            </div>
         </div>
-      </div>
     </nav>
 
 
     <!-- Modal -->
 
-    </div>
-    <script src="scripts/jquery-1.9.1.min.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
+</div>
+<script src="scripts/jquery-1.9.1.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 
-    <script src="scripts/swiper.jquery.min.js"></script>
-    <script src="scripts/swiper.animate.min.js"></script>
-    <script src="scripts/video.js"></script>
-    <script src="scripts/lightbox.min.js"></script>
-    <script src="scripts/typing-animate.js"></script>
-    <script src="scripts/app.js"></script>
-  </body>
-  </html>
+<script src="scripts/swiper.jquery.min.js"></script>
+<script src="scripts/swiper.animate.min.js"></script>
+<script src="scripts/video.js"></script>
+<script src="scripts/lightbox.min.js"></script>
+<script src="scripts/typing-animate.js"></script>
+<script src="scripts/app.js"></script>
+</body>
+</html>
