--- a/tdc_6.html
+++ b/tdc_6.html
@@ -45,13 +45,25 @@
             <div class="titlepart">
             </div>
             <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <a href="images/tdc6/dimg_03.png" data-lightbox="lightbox" ><img src="./images/tdc6/dimg_03.png" class="simg3" style="height: 80%;"></a>
-                <div class="simg4" style="height:80%">
-                  <a href="images/tdc6/dimg_05.png" data-lightbox="lightbox" ><img src="./images/tdc6/dimg_05.png" class="smg1"></a>
-                </div>
-              </div>
+                        <div class="grid" style="display:none;">
+                            <!--<a href="images/tdc6/i3_s.png" data-lightbox="lightbox"> <img src="./images/tdc6/i3_s.png"-->
+                                                                                          <!--class=" width-1-2"> </a>-->
+                            <div class=" width-2-2">
+                                <a href="images/tdc6/i1.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tdc6/i1.jpg" style="height: 468px"> </a>
+                            </div>
+                            <div class=" width-2-2">
+                                <a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img
+                                        src="./images/tdc6/i2.jpg"> </a>
+                                <div style="margin-top: 16px">
+                                    <a href="images/tdc6/i3.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc6/i3.jpg" class="width-1-2" style="height: 223px"> </a>
+                                    <a href="images/tdc6/i4.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc6/i4.jpg" class="width-2-2" style="height: 223px"> </a>
+                                </div>
 
+                            </div>
+                        </div>
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">	<img src="images/tdc6/i1.jpg">	</div>
