--- a/1_1_zhigong1.html
+++ b/1_1_zhigong1.html
@@ -35,7 +35,7 @@
               <img src="./images/tiao_03.png" style="margin: 0 0 50px;">
             </div>
 
-            <div class=" bodypart">
+            <div class=" bodypart" style="background: transparent;">
               <p class="desc typing-ani" style="background:transparent">
                 <span class="text">集团工会紧扣“转型发展”这一中心，坚持发挥工会组织作用，增强职工归属感、感恩心，助力集团公司在区域经济和行业领域中塑造崭新的品牌形象。
                 </span>
@@ -48,12 +48,12 @@
             </div>
             <div id="image_list" class=" bodypart">
               <ul class="jiandanglist1">
-                <li><a href="./1_1_zhigong3.html"><img src="./images/zhigong/zhilist_06.png"></a></li>
-                <li><a href="./1_1_zhigong4.html"><img src="./images/zhigong/zhilist_09.png"></a></li>
-                <li><a href="./1_1_zhigong2.html"><img src="./images/zhigong/zhilist_03.png"></a></li>
+                <li><a href="./1_1_zhigong3.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_06.png"></div></a></li>
+                <li><a href="./1_1_zhigong4.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_09.png"></div></a></li>
+                <li><a href="./1_1_zhigong2.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_03.png"></div></a></li>
 
-                <li style="clear:both"><a href="./1_1_zhigong5.html"><img src="./images/zhigong/zhilist_15.png"></a></li>
-                <li><a href="./1_1_zhigong6.html"><img src="./images/zhigong/zhilist_18.png"></a></li>
+                <li style="clear:both"><a href="./1_1_zhigong5.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_15.png"></div></a></li>
+                <li><a href="./1_1_zhigong6.html" class="image-wrapper"><div class="xiao"><img src="./images/zhigong/zhilist_18.png"></div></a></li>
 
 
 
