--- a/tss_11.html
+++ b/tss_11.html
@@ -20,7 +20,7 @@
       <div class="logo"> <img src="./images/tss_logo.png"> </div>
       <div class="row" id="zlogo">
         <div class="col-md-4"></div>
-        <div class="col-md-4"><img src="./images/tss_head.png"></div>
+        <div class="col-md-4"><img src="./images/style/tss_head.png"></div>
         <div class="col-md-4"></div>
       </div>
     </div>
@@ -48,11 +48,24 @@
 
             </div>
             <div id="image_list" class=" bodypart">
-              <div class="grid" style="display:none;">
-                <a href="images/tss11/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss11/img11_03.png" class="zimg1" style="height: 80%;"></a>
-                <div class="zimg2" style="height:80%">
-                  <a href="images/tss11/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss11/img11_06.png" class="amg1"></a>
-                  <a href="images/tss11/i9.jpg" data-lightbox="lightbox" ><img src="./images/tss11/img11_09.png" class="amg2"></a>
+              <div class="grid" style="height:100%;display:none;">
+                <div style="width:50%;  height: 100%; padding: 0 5px 0  0; float:left;overflow:hidden;">
+                  <a href="images/tss11/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss11/img11_03.png" style=""></a>
+                </div>
+                <div style="width:50%; height: 100%; padding: 0  0  0 5px;float:left;overflow:hidden;">
+                  <div style="width:50%; height:50%;  padding: 0 5px 5px  0;float:left;overflow:hidden;">
+                    <a href="images/tss11/i1.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i1.jpg" style="height:100%;width:auto;"></a>
+                  </div>
+                  <div style="width:50%; height:50%;  padding: 0 0 5px 5px;float:left;overflow:hidden;">
+                    <a href="images/tss11/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i3.jpg" style="height:100%;width:auto;"></a>
+                  </div>
+                  <div style="width:50%; height:50%;  padding: 5px 5px 0 0;float:left;overflow:hidden;">
+                    <a href="images/tss11/i2.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i2.jpg" style="height:100%;width:auto;"></a>
+                  </div>
+                  <div style="width:50%; height:50%;  padding: 5px 0 0 5px;float:left;overflow:hidden;">
+                    <a href="images/tss11/i9.jpg" data-lightbox="lightbox" ><img src="./images/tss11/i9.jpg" style="height:100%;width:auto;"></a>
+                  </div>
+
                 </div>
               </div>
 
