--- a/tss_12.html
+++ b/tss_12.html
@@ -20,7 +20,7 @@
         <div class="logo"><img src="./images/tss_logo.png"></div>
         <div class="row" id="zlogo">
             <div class="col-md-4"></div>
-            <div class="col-md-4"><img src="./images/tss_head.png"></div>
+            <div class="col-md-4"><img src="./images/style/tss_head.png"></div>
             <div class="col-md-4"></div>
         </div>
     </div>
