--- a/index.html
+++ b/index.html
@@ -23,29 +23,21 @@
             <div class="col-md-3"></div>
             <div class="col-md-6"><img src="./images/logo.png" class="biao"></div>
             <div class="col-md-3"></div>
-
         </div>
 
         <div class="row" id="fenlei">
-
             <div class="col-md-3">
                 <a href="1_business.html" class="sb business_btn"> </a>
             </div>
-
             <div class="col-md-3">
                 <a href="1_profile.html" class="sb profile_btn "> </a>
             </div>
-
-
             <div class="col-md-3">
-                <a href="1_party.html" class="sb party_btn"> </a>
+                <a href="1_jiandang.html" class="sb party_btn"> </a>
             </div>
-
-
             <div class="col-md-3">
                 <a href="1_culture.html" class="sb culture_btn"> </a>
             </div>
-
         </div>
 
         <a id="exit_btn" class="exit_btn" href="#"> 退出 </a>
