调整首页菜单

--- a/1_jiandang.html
+++ b/1_jiandang.html
@@ -28,15 +28,15 @@
 
         <div class="row" id="fenlei">
             <div class="col-md-4">
-              <a href="" class="business_btn4">  </a>
+              <a href="1_1_jiandang1.html" class="business_btn4">  </a>
             </div>
             <div class="col-md-4">
-              <a href="" class="culture_btn4">  </a>
+              <a href="1_1_zhigong1.html" class="culture_btn4">  </a>
             </div>
             <div class="col-md-4">
               <a href="" class="party_btn4"> </a>
             </div>
-          
+
         </div>
 
     </div>
