修正周水子钢材页面

--- a/tdc_6.html
+++ b/tdc_6.html
@@ -46,21 +46,25 @@
             </div>
             <div id="image_list" class=" bodypart">
                         <div class="grid" style="display:none;">
-                            <!--<a href="images/tdc6/i3_s.png" data-lightbox="lightbox"> <img src="./images/tdc6/i3_s.png"-->
-                                                                                          <!--class=" width-1-2"> </a>-->
-                            <div class=" width-2-2">
+                            <div class=" width-1-2">
                                 <a href="images/tdc6/i1.jpg" data-lightbox="lightbox"><img
-                                        src="./images/tdc6/i1.jpg" style="height: 468px"> </a>
+                                        src="./images/tdc6/i1.jpg" class="img-fullh"> </a>
                             </div>
-                            <div class=" width-2-2">
+                            <div class="width-2-2">
+                              <div class="height-1-2">
                                 <a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img
                                         src="./images/tdc6/i2.jpg"> </a>
-                                <div style="margin-top: 16px">
+                              </div>
+                              <div class="height-2-2">
+                                <div class=" width-1-2">
                                     <a href="images/tdc6/i3.jpg" data-lightbox="lightbox"><img
-                                            src="./images/tdc6/i3.jpg" class="width-1-2" style="height: 223px"> </a>
-                                    <a href="images/tdc6/i4.jpg" data-lightbox="lightbox"><img
-                                            src="./images/tdc6/i4.jpg" class="width-2-2" style="height: 223px"> </a>
+                                        src="./images/tdc6/i3.jpg"  class="img-fullh"> </a>
                                 </div>
+                                <div class="width-2-2">
+                                    <a href="images/tdc6/i4.jpg" data-lightbox="lightbox"><img
+                                            src="./images/tdc6/i4.jpg" class="img-fullh"> </a>
+                                </div>
+                              </div>
 
                             </div>
                         </div>
