--- a/1_1_tss2.html
+++ b/1_1_tss2.html
@@ -39,10 +39,10 @@
 				</div>
 				<div class="flex-box half-height" style="width: 600px; margin: auto;">
 
- 					<div class="width-1-2">
+ 					<div class="row-1-2-left">
 					<a href="tss_12.html" class="image-wrapper" > <div class=""><img src="./images/tss/ooimg_15.png"></div><p>资产运营 </p></a>
 					</div>
-					<div class="width-1-2">
+					<div class="row-1-2-left">
 					<a href="tss_13.html" class="image-wrapper" > <div class=""><img src="./images/tss/ooimg_18.png"></div><p>旅顺龙头生态种植养殖基地</p> </a>
 					</div>
 
