--- a/tdc_3.html
+++ b/tdc_3.html
@@ -47,29 +47,29 @@
                     <div id="image_list" class=" bodypart">
                         <div class="grid" style="display:none;">
                             <!--<a href="images/tdc3/i3_s.png" data-lightbox="lightbox"> <img src="./images/tdc3/i3_s.png"-->
-                                                                                          <!--class=" width-1-2"> </a>-->
-                            <div class=" width-1-2">
-                              <div class=" height-1-2">
+                                                                                          <!--class=" row-1-2-left"> </a>-->
+                            <div class=" row-1-2-left">
+                              <div class=" col-1-2-top">
 
                                 <a href="images/tdc3/i3.jpg" data-lightbox="lightbox"><img
                                         src="./images/tdc3/i3.jpg"> </a>
                               </div>
-                              <div class=" height-2-2">
+                              <div class=" col-1-2-bottom">
                                     <a href="images/tdc3/i4.jpg" data-lightbox="lightbox"><img
                                             src="./images/tdc3/i4.jpg"> </a>
                               </div>
                             </div>
-                            <div class=" width-2-2">
-                              <div class=" height-1-2">
+                            <div class=" row-1-2-right">
+                              <div class=" col-1-2-top">
                                 <a href="images/tdc3/i5.jpg" data-lightbox="lightbox"><img
                                         src="./images/tdc3/i5.jpg"> </a>
                               </div>
-                              <div class=" height-2-2">
-                                <div class=" width-1-2">
+                              <div class=" col-1-2-bottom">
+                                <div class=" row-1-2-left">
                                     <a href="images/tdc3/i1_s.png" data-lightbox="lightbox"><img
                                             src="./images/tdc3/i1_s.png" class="img-fullh" > </a>
                                 </div>
-                                <div class=" width-2-2">
+                                <div class=" row-1-2-right">
                                     <a href="images/tdc3/i2_s.png" data-lightbox="lightbox"><img
                                             src="./images/tdc3/i2_s.png" class="img-fullh" > </a>
                                 </div>
