--- a/tss_layout_13.html
+++ b/tss_layout_13.html
@@ -47,26 +47,26 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none; height:100%;">
-                <div class="col-1-2-left" style="">
+                <div class="row-1-2-left" style="">
                     <a href="images/tss11/img11_06.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_06.png" class="" style="width: 100%; height: 100%;"></a>
                 </div>
 
-                <div class="col-1-2-right" style="">
-                  <div class="lin-1-2-top" style="">
-                    <div class="col-1-2-left" style="">
+                <div class="row-1-2-right" style="">
+                  <div class="col-1-2-top" style="">
+                    <div class="row-1-2-left" style="">
                     <!--<div class="top01left" style="width:50%; height:100%; float:left;  padding-right: 10px; overflow: hidden;">-->
                       <a href="images/tss11/img11_03.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_03.png" class="" style="width: 100%;  height: 100%"></a>
                     </div>
-                    <div  class="col-1-2-right" style="">
+                    <div  class="row-1-2-right" style="">
                       <a href="images/tss11/img11_03.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_03.png"class="" style="width: 100%;  height: 100%"></a>
                     </div>
                   </div>
 
-                  <div class="lin-1-2-foot" style="">
-                    <div class="col-1-2-left" style="">
+                  <div class="col-1-2-bottom" style="">
+                    <div class="row-1-2-left" style="">
                       <a href="images/tss11/img11_09.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_09.png" class="" style="width: 100%;  height: 100%"></a>
                     </div>
-                    <div  class="col-1-2-right" style="">
+                    <div  class="row-1-2-right" style="">
                       <a href="images/tss11/img11_09.png" data-lightbox="lightbox" ><img src="./images/tss11/img11_09.png" class="" style="width: 100%;  height: 100%"></a>
                     </div>
                   </div>
@@ -101,7 +101,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-              
+
               <source src="audios/male/tdc_1.ogg" type="audio/ogg" />
             </audio>
           </div>
@@ -109,7 +109,7 @@
       </div>
     </nav>
 
- 
+
     </div>
     <script src="scripts/jquery-1.9.1.min.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
