--- a/tdc_6.html
+++ b/tdc_6.html
@@ -46,21 +46,21 @@
             </div>
             <div id="image_list" class=" bodypart">
                         <div class="grid" style="display:none;">
-                            <div class=" width-1-2">
+                            <div class=" row-1-2-left">
                                 <a href="images/tdc6/i1.jpg" data-lightbox="lightbox"><img
                                         src="./images/tdc6/i1.jpg" class="img-fullh"> </a>
                             </div>
-                            <div class="width-2-2">
-                              <div class="height-1-2">
+                            <div class="row-1-2-right">
+                              <div class="col-1-2-top">
                                 <a href="images/tdc6/i2.jpg" data-lightbox="lightbox"><img
                                         src="./images/tdc6/i2.jpg"> </a>
                               </div>
-                              <div class="height-2-2">
-                                <div class=" width-1-2">
+                              <div class="col-1-2-bottom">
+                                <div class=" row-1-2-left">
                                     <a href="images/tdc6/i3.jpg" data-lightbox="lightbox"><img
                                         src="./images/tdc6/i3.jpg"  class="img-fullh"> </a>
                                 </div>
-                                <div class="width-2-2">
+                                <div class="row-1-2-right">
                                     <a href="images/tdc6/i4.jpg" data-lightbox="lightbox"><img
                                             src="./images/tdc6/i4.jpg" class="img-fullh"> </a>
                                 </div>
