--- a/tss_9.html
+++ b/tss_9.html
@@ -47,22 +47,22 @@
             </div>
             <div id="image_list" class=" bodypart">
               <div class="grid" style="display:none; height:100%;">
-                <div class="col-1-2-left" style="">
+                <div class="row-1-2-left" style="">
                     <a href="images/tss9/i3.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_03.png" class="" style="width: 100%; height: 100%;"></a>
                 </div>
 
-                <div class="col-1-2-right" style="">
-                  <div class="lin-1-2-top" style="">
+                <div class="row-1-2-right" style="">
+                  <div class="col-1-2-top" style="">
                     <div  class="" style="">
                       <a href="images/tss9/i6.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_06.png"class="" style="width: 100%;  height: 100%"></a>
                     </div>
                   </div>
 
-                  <div class="lin-1-2-foot" style="">
-                    <div class="col-1-2-left" style="">
+                  <div class="col-1-2-bottom" style="">
+                    <div class="row-1-2-left" style="">
                       <a href="images/tss9/i10.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_10.png" class="" style="width: 100%;  height: 100%"></a>
                     </div>
-                    <div  class="col-1-2-right" style="">
+                    <div  class="row-1-2-right" style="">
                       <a href="images/tss9/i12.jpg" data-lightbox="lightbox" ><img src="./images/tss9/img9_12.png" class="" style="width: 100%;  height: 100%"></a>
                     </div>
                   </div>
@@ -101,7 +101,7 @@
             <a class="back-home-btn ctl_btn" href="index.html"> 主页  </a>
             <a class="play-audio-btn ctl_btn" href="javascript:void(0)"><span class="glyphicon glyphicon-volume-up" aria-hidden="true"></span> </a>
             <audio id="audio-js"  class="audio-js">
-              
+
               <source src="audios/male/tdc_1.ogg" type="audio/ogg" />
             </audio>
           </div>
